--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 * {
   padding: 0;
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -19,7 +20,6 @@ nav {
   background-color: #000;
   height: 70px;
   align-items: center;
-  /* border-bottom: 1px solid #00dc93; */
 }
 
 nav .iconDensity {
@@ -57,8 +57,8 @@ nav ul li:hover {
 }
 
 #HomeStart {
-  background-image: url('https://browsecat.art/sites/default/files/tron-background-129335-1774918-9294642.png');
-  background-size: cover;
+  background-image: url('../../public/img/bg-hero.jpg');
+  background-position:bottom;
 }
 
 #HomeService {
