fixed about page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,16 +27,18 @@ nav .iconDensity {
   margin-right: 10%;
 }
 
-nav .logo, footer div a .logo {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+nav .logo,
+footer div a .logo {
+  font-family: Georgia, "Times New Roman", Times, serif;
   font-weight: bolder;
   height: auto;
   width: 100px;
   margin-left: 10%;
 }
 
-nav .logo:hover, footer div a .logo {
-  cursor:context-menu;
+nav .logo:hover,
+footer div a .logo {
+  cursor: context-menu;
 }
 
 nav ul {
@@ -52,13 +54,70 @@ nav ul li {
 
 nav ul li:hover {
   color: #bbf7d0;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 #HomeStart {
-  background-image: url('../../public/img/bg-hero.jpg');
-  background-position:bottom;
+  background-image: url("../../public/img/bg-hero.jpg");
+  background-position: bottom;
   background-size: cover;
+}
+
+/* Responsive Breakpoint */
+/* Screen Laptop */
+@media screen and (max-width: 1024px) {
+  nav .iconDensity {
+    cursor: pointer;
+    display: flex;
+  }
+
+  nav .iconDensity {
+    color: #bbf7d0;
+  }
+
+  nav ul {
+    position: absolute;
+    flex-direction: column;
+    background-color: #000;
+    top: 0;
+    width: 50%;
+    margin-top: 69px;
+    height: 30vh;
+    justify-content: space-around;
+    transition: all 1s;
+  }
+
+  nav ul.visible {
+    transform: translateX(-100%);
+  }
+}
+
+/* Screen Tablet */
+@media screen and (max-width: 768px) {
+  nav .iconDensity {
+    cursor: pointer;
+    display: flex;
+  }
+
+  nav .iconDensity {
+    color: #bbf7d0;
+  }
+
+  nav ul {
+    position: absolute;
+    flex-direction: column;
+    background-color: #000;
+    top: 0;
+    width: 50%;
+    margin-top: 69px;
+    height: 30vh;
+    justify-content: space-around;
+    transition: all 1s;
+  }
+
+  nav ul.visible {
+    transform: translateX(-100%);
+  }
 }
 
 /* Screen Mobile */
